@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

class UserInterface {
        - logic: std::shared_ptr<LogicContainer>
        - clearInputBuffer() const: void
        - readInt(prompt: std::string) const: int
        - readString(prompt: std::string) const: std::string
        - manageClientsAndCars(): void
        - manageRepairs(): void
        - manageServicesForRepair(repair: std::shared_ptr<Repair>): void
        - manageResourcesAndPersonel(): void
        + UserInterface(logicContainer: std::shared_ptr<LogicContainer>)
        + run(): void
    }
    note left of UserInterface
        Interfejs użytkownika.
    end note

    class LogicContainer {
        - storage: std::shared_ptr<StorageContainer>
        - clientManager: std::shared_ptr<ClientManager>
        - carManager: std::shared_ptr<CarManager>
        - mechanicManager: std::shared_ptr<MechanicManager>
        - resourceManager: std::shared_ptr<ResourceManager>
        - repairManager: std::shared_ptr<RepairManager>
        + LogicContainer()
        + ~LogicContainer()
        + getClientManager() const: std::shared_ptr<ClientManager>
        + getCarManager() const: std::shared_ptr<CarManager>
        + getMechanicManager() const: std::shared_ptr<MechanicManager>
        + getResourceManager() const: std::shared_ptr<ResourceManager>
        + getRepairManager() const: std::shared_ptr<RepairManager>
        + getStorage() const: std::shared_ptr<StorageContainer>
        + saveSystem(filename: std::string) const: void
    }
    note left of LogicContainer
      Kontener z zarządcami i storage constainer.
    end note

    class DataSeeder {
        + prepareSystem(storage: StorageContainer&, filename: std::string): void
        + seed(storage: StorageContainer&): void
    }
    note right of DataSeeder
        W zależności od istnienia pliku ładuje repozytoria odpowiednimi danymi.
        Jeśli plik o podanej nazwie istnieje, deleguje metodę zczytania danych z tego pliku do storageContainer.
        Jeśli plik nie istnieje, ładuje dane testowe(przykładowe).
    end note

    class ClientManager {
        - clientRepository: ClientRepository&
        + ClientManager(repository: ClientRepository&)
        + getClient(personalId: std::string) const: std::shared_ptr<Client>
        + registerClient(firstName: std::string, lastName: std::string, phoneNumber: std::string, email: std::string, personalId: std::string): std::shared_ptr<Client>
        + unregisterClient(client: std::shared_ptr<Client>): void
        + findClients(predicate: ClientPredicate) const: std::vector<std::shared_ptr<Client>>
        + findAllClients() const: std::vector<std::shared_ptr<Client>>
    }
    note bottom of ClientManager
        Zarządza klientami systemu. Odpowiada za rejestrację nowych osób,
        bezpieczną archiwizację (wyrejestrowanie) oraz filtrowanie za pomocą predykatów.
    end note

    class CarManager {
        - carRepository: CarRepository&
        + CarManager(repo: CarRepository&)
        + getCar(vin: std::string) const: std::shared_ptr<Car>
        + registerCar(brand: std::string, model: std::string, vin: std::string, power: std::unique_ptr<PoweredBy>, owner: std::shared_ptr<Client>): std::shared_ptr<Car>
        + unregisterCar(car: std::shared_ptr<Car>): void
        + findCars(predicate: CarPredicate) const: std::vector<std::shared_ptr<Car>>
    }
    note bottom of CarManager
        Zarządza flotą pojazdów. Odpowiada za rejestrację nowych samochodów,
        walidację unikalności numerów VIN oraz ich wyrejestrowywanie.
    end note

    class MechanicManager {
        - mechanicRepository: MechanicRepository&
        - nextId: size_t
        + MechanicManager(repo: MechanicRepository&)
        + getMechanic(id: int) const: std::shared_ptr<Mechanic>
        + registerMechanic(firstName: std::string, lastName: std::string, spec: Specialization): std::shared_ptr<Mechanic>
        + unregisterMechanic(mechanic: std::shared_ptr<Mechanic>): void
        + findMechanics(predicate: MechanicPredicate) const: std::vector<std::shared_ptr<Mechanic>>
        + findAllMechanics() const: std::vector<std::shared_ptr<Mechanic>>
        + findElectricianMechanics() const: std::vector<std::shared_ptr<Mechanic>>
        + findEngineMechanics() const: std::vector<std::shared_ptr<Mechanic>>
        + findDiagnosticianMechanics() const: std::vector<std::shared_ptr<Mechanic>>
        + findVAGSpecialistMechanics() const: std::vector<std::shared_ptr<Mechanic>>
        + findMasterMechanics() const: std::vector<std::shared_ptr<Mechanic>>
    }
    note bottom of MechanicManager
        Zarządza personelem warsztatu. Przydziela unikalne identyfikatory ID,
        kontroluje stan dostępności mechaników oraz filtruje kadrę według specjalizacji.
    end note

    class RepairManager {
        - repairRepository: RepairRepository&
        - nextId: size_t
        + RepairManager(repo: RepairRepository&)
        + getRepair(id: int) const: std::shared_ptr<Repair>
        + registerRepair(beginTime: boost::posix_time::ptime, car: std::shared_ptr<Car>): std::shared_ptr<Repair>
        + unregisterRepair(repair: std::shared_ptr<Repair>) const: void
        + findRepairs(predicate: RepairPredicate) const: std::vector<std::shared_ptr<Repair>>
        + findAllRepairs() const: std::vector<std::shared_ptr<Repair>>
    }
    note bottom of RepairManager
        Zarządza procesami i zleceniami naprawczymi. Tworzy nowe zlecenia, przypisuje im
        automatycznie generowane ID i koordynuje status naprawy pojazdu.
    end note

    class ResourceManager {
        - resourceRepository: ResourceRepository&
        - nextId: size_t
        + ResourceManager(repo: ResourceRepository&)
        + getResource(id: int) const: std::shared_ptr<Resource>
        + registerResource(resourceName: std::string, res: ResourceType): std::shared_ptr<Resource>
        + unregisterResource(resource: std::shared_ptr<Resource>): void
        + findResources(predicate: ResourcePredicate) const: std::vector<std::shared_ptr<Resource>>
        + findAllResources() const: std::vector<std::shared_ptr<Resource>>
    }
    note bottom of ResourceManager
        Zarządza zasobami technicznymi (podnośniki, kompresory, komputery diagnostyczne).
        Kontroluje zajętość infrastruktury warsztatowej przed dopisaniem nowej usługi.
    end note


    class StorageContainer <<Storage>>
    class ClientRepository <<Repository>>
    class CarRepository <<Repository>>
    class MechanicRepository <<Repository>>
    class RepairRepository <<Repository>>
    class ResourceRepository <<Repository>>

' <--- RELACJE I POWIĄZANIA --->

' UI korzysta z logiki
UserInterface "1" --> "1" LogicContainer : Wydaje polecenia / Steruje logiką

' DataSeeder komunikuje się ze StorageContainer w celu początkowej inicjalizacji danych
DataSeeder ..> StorageContainer

' LogicContainer zawiera w sobie Managerów (Kompozycja)
LogicContainer "1" *-- "1" ClientManager
LogicContainer "1" *-- "1" CarManager
LogicContainer "1" *-- "1" MechanicManager
LogicContainer "1" *-- "1" RepairManager
LogicContainer "1" *-- "1" ResourceManager

' LogicContainer ma też wskaźnik na Storage (do zapisu stanu z poziomu aplikacji)
LogicContainer "1" --> "1" StorageContainer : Inicjuje magazyn i zarządza zapisem

' Managerowie delegują zadania i komunikują się z wstrzykniętymi Repozytoriami
ClientManager --> ClientRepository : Zapis/Odczyt danych
CarManager --> CarRepository : Zapis/Odczyt danych
MechanicManager --> MechanicRepository : Zapis/Odczyt danych
RepairManager --> RepairRepository : Zapis/Odczyt danych
ResourceManager --> ResourceRepository : Zapis/Odczyt danych

@enduml